<resources>
    <string name="app_name">LeagueMastery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_champion">Champion</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="chercher_champion_btn">Chercher Champion</string>
    <string name="champion_edittext">Champion</string>
    <string name="champion_attribut">Champion</string>
    <string name="titre_attribut">Titre</string>
    <string name="roles_attribut">Roles</string>
    <string name="main_search">Champion...</string>
</resources>